tests/derive_ui/subcommand_and_methods.stderr
error: methods in attributes are not allowed for subcommand
  --> tests/derive_ui/subcommand_and_methods.rs:16:15
   |
16 |     #[command(subcommand, version = "foo")]
   |               ^^^^^^^^^^
